--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>OrgaClick</title>
+    <meta name="description" content="OrgaClick - Where creators meet brands for genuine partnerships" />
+    <meta name="author" content="OrgaClick" />
+
+    <meta property="og:title" content="OrgaClick" />
+    <meta property="og:description" content="OrgaClick - Where creators meet brands for genuine partnerships" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://orgaclick.brandwithfrank.com/orgaclick-temp-logo.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@OrgaClick" />
+    <meta name="twitter:image" content="https://orgaclick.brandwithfrank.com/orgaclick-temp-logo.png" />
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/react-app/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
